Committing restructuring changes

--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,24 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d6578">  <td>19/10/06 15:44:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AvactisRegisteredUser.adminLogin(java.lang.String, java.lang.String)[pri:0, instance:Application.AvactisRegisteredUser@271053e1]">adminLogin</td> 
-  <td>main@1465085305</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>19/10/06 15:44:43</td>   <td>9481</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AvactisRegisteredUser.adminLogin(java.lang.String, java.lang.String)[pri:0, instance:Application.AvactisRegisteredUser@271053e1]">adminLogin</td> 
-  <td>main@1465085305</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/06 15:45:35</td>   <td>61322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AvactisGuestUser.adminLogin(java.lang.String, java.lang.String)[pri:0, instance:Application.AvactisGuestUser@589838eb]">adminLogin</td> 
-  <td>main@1465085305</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/06 15:45:45</td>   <td>70814</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AvactisGuestUser.adminLogin(java.lang.String, java.lang.String)[pri:0, instance:Application.AvactisGuestUser@589838eb]">adminLogin</td> 
-  <td>main@1465085305</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>19/10/06 15:44:59</td>   <td>24861</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AvactisRegisteredUser.checkDetails()[pri:0, instance:Application.AvactisRegisteredUser@271053e1]">checkDetails</td> 
-  <td>main@1465085305</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/06 15:46:01</td>   <td>86680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AvactisGuestUser.checkDetails()[pri:0, instance:Application.AvactisGuestUser@589838eb]">checkDetails</td> 
-  <td>main@1465085305</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>19/10/06 15:44:49</td>   <td>15485</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AvactisRegisteredUser.clickOnCustomer()[pri:0, instance:Application.AvactisRegisteredUser@271053e1]">clickOnCustomer</td> 
-  <td>main@1465085305</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/06 15:45:51</td>   <td>77269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AvactisGuestUser.clickOnCustomer()[pri:0, instance:Application.AvactisGuestUser@589838eb]">clickOnCustomer</td> 
-  <td>main@1465085305</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>19/10/06 15:44:23</td>   <td>-11339</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AvactisRegisteredUser.init(java.lang.String)[pri:0, instance:Application.AvactisRegisteredUser@271053e1]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1465085305</td>   <td></td> </tr>
-<tr bgcolor="e8a876">  <td>19/10/06 15:45:26</td>   <td>51760</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AvactisGuestUser.init(java.lang.String)[pri:0, instance:Application.AvactisGuestUser@589838eb]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1465085305</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>19/10/07 23:01:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AvactisRegisteredUser.CustomerHome()[pri:0, instance:ApplicationTest.AvactisRegisteredUser@589838eb]">CustomerHome</td> 
+  <td>main@1709366259</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>19/10/07 23:01:57</td>   <td>15704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AvactisGuestUser.customerHome()[pri:0, instance:ApplicationTest.AvactisGuestUser@42dafa95]">customerHome</td> 
+  <td>main@1709366259</td>   <td></td> </tr>
+<tr bgcolor="7d6578">  <td>19/10/07 23:01:33</td>   <td>-8137</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AvactisRegisteredUser.init(java.lang.String)[pri:0, instance:ApplicationTest.AvactisRegisteredUser@589838eb]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1709366259</td>   <td></td> </tr>
+<tr bgcolor="e8a876">  <td>19/10/07 23:01:51</td>   <td>9951</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AvactisGuestUser.init(java.lang.String)[pri:0, instance:ApplicationTest.AvactisGuestUser@42dafa95]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1709366259</td>   <td></td> </tr>
 </table>
